[tool.poetry]
name = "fluidhandler"
version = "0.1.0"
description = ""
authors = ["skleppinger <s.kleppinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
infrareuse = {path = "../InfraReuse", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
known-first-party = ["infrareuse"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]
